tests/ui-msrv/transmute-mut-src-not-nocell.stderr
error[E0277]: the trait bound `Src: Immutable` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-nocell.rs:24:37
   |
24 | const SRC_NOT_IMMUTABLE: &mut Dst = transmute_mut!(&mut Src);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `Src`
   |
note: required by `AssertSrcIsImmutable`
  --> tests/ui-msrv/transmute-mut-src-not-nocell.rs:24:37
   |
24 | const SRC_NOT_IMMUTABLE: &mut Dst = transmute_mut!(&mut Src);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: Immutable` is not satisfied
  --> tests/ui-msrv/transmute-mut-src-not-nocell.rs:24:37
   |
24 | const SRC_NOT_IMMUTABLE: &mut Dst = transmute_mut!(&mut Src);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `Src`
   |
note: required by a bound in `AssertSrcIsImmutable`
  --> tests/ui-msrv/transmute-mut-src-not-nocell.rs:24:37
   |
24 | const SRC_NOT_IMMUTABLE: &mut Dst = transmute_mut!(&mut Src);
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsImmutable`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
